--- a/.env
+++ b/.env
@@ -1,5 +1,3 @@
 LEGACY_DL_DSN=directliquidation_dev:dlpawRR24!@@tcp(sup-mysql01-wb.trgdev.local:3306)/dl_dev_rc-rc18wb-xr0870
 NEW_DL_DSN=postgresql://ausweis:pass@127.0.0.1:54320/ausweis?sslmode=disable
-
-#prod
-
+AUSWEIS_SOCKET=127.0.0.1:18881
